<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:padding="20dip"
    android:columnCount="2"
    android:rowCount="8"
    android:background="@drawable/background4">

    <TextView
        android:text="@string/add_pseudo"
        android:layout_gravity="right|center_vertical"
        android:layout_column="0"
        android:layout_row="0"/>

    <EditText
        android:layout_gravity="fill_horizontal"
        android:id="@+id/add_pseudo"
        android:hint="@string/add_pseudo_hint"
        android:layout_column="1"
        android:layout_row="0"
        android:nextFocusDown="@+id/add_password"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <TextView
        android:text="@string/add_password"
        android:layout_gravity="right|center_vertical"
        android:layout_column="0"
        android:layout_row="1"/>

    <EditText
        android:layout_gravity="fill_horizontal"
        android:id="@+id/add_password"
        android:hint="@string/add_password_hint"
        android:layout_column="1"
        android:layout_row="1"
        android:nextFocusDown="@+id/verif_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <TextView
        android:text="@string/add_password_verif"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="2" />

    <EditText
        android:layout_gravity="fill_horizontal"
        android:lines="1"
        android:id="@+id/verif_password"
        android:layout_column="1"
        android:layout_row="2"
        android:hint="@string/add_password_hint"
        android:inputType="textPassword"/>

    <Space
        android:layout_column="1"
        android:layout_row="3"
        android:layout_width="fill_parent"
        />

    <CheckBox
        android:id="@+id/check_barman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/new_barman" />


    <CheckBox
        android:id="@+id/check_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/new_manager" />

    <Space
        android:layout_column="1"
        android:layout_row="4"
        android:layout_width="fill_parent"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/action_save"
        android:onClick="save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/signin_btn"
        bootstrap:bb_icon_right="fa-pencil-square-o"
        bootstrap:bb_type="primary"
        android:layout_columnSpan="2"
        bootstrap:bb_roundedCorners="true"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/action_quit"
        android:onClick="quit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/return_btn"
        bootstrap:bb_icon_right="fa-times-circle"
        bootstrap:bb_type="primary"
        android:layout_columnSpan="2"
        bootstrap:bb_roundedCorners="true"
        />


</GridLayout>