<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background4"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left">
<GridLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="left"
android:columnCount="2"
android:rowCount="12"
android:padding="20dip">

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/add_drinkName" />

        <EditText
            android:id="@+id/modify_drink_name_fill"
            android:layout_width="fill_parent"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:hint="@string/add_drink_fill"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusDown="@+id/add_password"
            android:singleLine="true" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="1"
            android:text="@string/add_drink_type" />

        <Spinner
            android:id="@+id/modify_drink_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_row="1"
            android:prompt="@string/add_drink_type"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="2"
            android:text="@string/add_drink_salingPrice" />

        <EditText
            android:id="@+id/modify_drink_sprice_fill"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:hint="@string/add_drink_salingPrice"
            android:inputType="numberDecimal"
            android:lines="1" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="3"
            android:text="@string/add_drink_purchasePrice" />

        <EditText
            android:id="@+id/modify_drink_pprice_fill"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:hint="@string/add_drink_purchasePrice"
            android:inputType="numberDecimal"
            android:lines="1" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="4"
            android:text="@string/add_drink_stock" />

        <EditText
            android:id="@+id/modify_drink_stock_fill"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4"
            android:hint="@string/add_drink_stock"
            android:inputType="number"
            android:lines="1" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="5"
            android:text="@string/add_drink_stockMax" />

        <EditText
            android:id="@+id/modify_drink_stockmax_fill"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5"
            android:hint="@string/add_drink_stockMax"
            android:inputType="number"
            android:lines="1" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="6"
            android:text="@string/add_drink_seuil" />

        <EditText
            android:id="@+id/modify_drink_seuil_fill"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6"
            android:hint="@string/add_drink_seuil"
            android:inputType="number"
            android:lines="1" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="7"
            android:text="@string/add_drink_descriptionEN" />

        <EditText
            android:id="@+id/modify_drink_descrEN_fill"
            android:layout_width="match_parent"
            android:layout_column="1"
            android:layout_row="7"
            android:hint="@string/add_drink_description"
            android:inputType="text|textMultiLine"
            android:lines="3"
            android:layout_height="106dp" />
    <TextView
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="8"
        android:text="@string/add_drink_descriptionFR" />

    <EditText
        android:id="@+id/modify_drink_descrFR_fill"
        android:layout_width="match_parent"
        android:layout_column="1"
        android:layout_row="8"
        android:hint="@string/add_drink_description"
        android:inputType="text|textMultiLine"
        android:lines="3"
        android:layout_height="106dp" />



    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="saveModification"
        android:text="@string/add_menu_action_save"
        android:layout_row="9"
        android:layout_columnSpan="2"
        bootstrap:bb_icon_right="fa-pencil-square-o"
        android:layout_margin="5dp"
        bootstrap:bb_type="primary"
        bootstrap:bb_roundedCorners="true"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/add_drink_cancel_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="cancelModification"
        android:text="@string/cancel_btn"
        android:layout_row="10"
        bootstrap:bb_icon_right="fa-close"
        bootstrap:bb_type="primary"
        android:layout_margin="5dp"
        android:layout_columnSpan="2"
        bootstrap:bb_roundedCorners="true"
        />
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/modify_drink_remove_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="removeDrink"
        android:text="@string/removeDrink_btn"
        bootstrap:bb_icon_right="fa-eraser"
        bootstrap:bb_type="primary"
        android:layout_row="11"
        android:layout_margin="5dp"
        android:layout_columnSpan="2"
        bootstrap:bb_roundedCorners="true"/>

    </GridLayout>
</ScrollView>