<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/table"
        android:layout_width="83dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/table"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_table_hint"
        android:imeActionLabel="@string/login_btn"
        android:imeActionId="6"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"/>

</LinearLayout>