<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background4"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:columnCount="2"
        android:rowCount="20"
        android:padding="20dip">

    <TextView
        android:text="@string/add_drinkName"
        android:layout_gravity="left|center_vertical"
        android:layout_column="0"
        android:layout_row="0"
        />

    <EditText
        android:layout_gravity="fill_horizontal"
        android:id="@+id/add_drink_name"
        android:hint="@string/add_drink_fill"
        android:layout_column="1"
        android:layout_width="fill_parent"
        android:layout_row="0"
        android:nextFocusDown="@+id/add_password"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <TextView
        android:text="@string/add_drink_type"
        android:layout_gravity="left|center_vertical"
        android:layout_column="0"
        android:layout_row="1"/>

      <Spinner
        android:id="@+id/add_drink_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:prompt="@string/add_drink_type"
        android:spinnerMode="dropdown"
        android:layout_column="1"
        android:layout_row="1"
        />
    <TextView
        android:text="@string/add_drink_salingPrice"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="2" />

    <EditText
        android:layout_gravity="fill_horizontal"
        android:lines="1"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:id="@+id/add_drink_sprice_fill"
        android:layout_column="1"
        android:layout_row="2"
        android:hint="@string/add_drink_salingPrice"
        android:inputType="numberDecimal"/>
    <TextView
        android:text="@string/add_drink_purchasePrice"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="3" />

    <EditText
        android:layout_gravity="fill_horizontal"
        android:lines="1"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:id="@+id/add_drink_pprice_fill"
        android:layout_column="1"
        android:layout_row="3"
        android:hint="@string/add_drink_purchasePrice"
        android:inputType="numberDecimal"/>
    <TextView
        android:text="@string/add_drink_stock"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="4" />

    <EditText
        android:layout_gravity="fill_horizontal"
        android:lines="1"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:id="@+id/add_drink_stock_fill"
        android:layout_column="1"
        android:layout_row="4"
        android:hint="@string/add_drink_stock"
        android:inputType="number"/>

    <TextView
        android:text="@string/add_drink_stockMax"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="5" />

    <EditText
        android:layout_gravity="fill_horizontal"
        android:lines="1"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:id="@+id/add_drink_stockmax_fill"
        android:layout_column="1"
        android:layout_row="5"
        android:hint="@string/add_drink_stockMax"
        android:inputType="number"/>
    <TextView
        android:text="@string/add_drink_seuil"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="6" />

    <EditText
        android:layout_gravity="fill_horizontal"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:lines="1"
        android:id="@+id/add_drink_seuil_fill"
        android:layout_column="1"
        android:layout_row="6"
        android:hint="@string/add_drink_seuil"
        android:inputType="number"/>

    <TextView
        android:text="@string/add_drink_descriptionEN"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="7" />

    <EditText
        android:layout_gravity="fill_horizontal|left|bottom"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:lines="3"
        android:id="@+id/add_drink_descrEN_fill"
        android:layout_column="1"
        android:layout_row="7"
        android:hint="@string/add_drink_description"
        android:inputType="text|textMultiLine" />
        <TextView
            android:text="@string/add_drink_descriptionFR"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="8" />

        <EditText
            android:layout_gravity="fill_horizontal|left|bottom"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:lines="3"
            android:id="@+id/add_drink_descrFR_fill"
            android:layout_column="1"
            android:layout_row="8"
            android:hint="@string/add_drink_description"
            android:inputType="text|textMultiLine" />





    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/button"
        android:onClick="save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_btn"
        bootstrap:bb_icon_right="fa-pencil-square-o"
        bootstrap:bb_type="primary"
        android:layout_columnSpan="2"
        bootstrap:bb_roundedCorners="true"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/add_drink_cancel_btn"
        android:onClick="cancelBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cancel_btn"
        bootstrap:bb_icon_right="fa-pencil-square-o"
        bootstrap:bb_type="primary"
        android:layout_columnSpan="2"
        bootstrap:bb_roundedCorners="true"
        />


    <!-- <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"
        android:id="@+id/button"
        android:layout_row="8"
        android:onClick="save"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"
        android:id="@+id/add_drink_cancel_btn"
        android:onClick="cancelBtn"
        android:layout_row="8"
        android:layout_column="0" /> -->

</GridLayout>


</ScrollView>
