<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity"
    android:text="@+id/myRL"
    android:background="@drawable/background4">


    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menu_searchView"
        android:queryHint="@string/menu_search"
        android:layout_gravity="center_horizontal"
        android:touchscreenBlocksFocus="false" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/validate_order"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/validate_order_btn"
        bootstrap:bb_icon_right="fa-pencil-square-o"
        bootstrap:bb_type="primary"
        bootstrap:bb_roundedCorners="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/menu_linearLayout">


        <TextView
            android:id="@+id/menu_drinkType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:layout_row="1"
            android:gravity="left"
            android:text="@string/menu_typeDrink"
            android:clickable="true"
            android:padding="@dimen/small_padding"
            android:onClick="sortByType"
            android:textStyle="bold"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/menu_drinkName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:text="@string/menu_nameDrink"
            android:layout_gravity="center_horizontal"
            android:layout_weight="50"
            android:gravity="left"
            android:clickable="true"
            android:padding="@dimen/default_padding"
            android:onClick="sortByName"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menu_drinkPrice"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:text="@string/menu_priceDrink"
            android:gravity="right"
            android:clickable="true"
            android:padding="@dimen/default_padding"
            android:onClick="sortBySalingPrice"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginBottom="25dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/menu_addDrink"
            android:text="@string/menu_addDrink"
            android:layout_height="wrap_content"
            android:layout_width="20dp"
            android:layout_row="4"
            android:textSize="16dp"
            android:layout_weight="7.46"
            android:textStyle="bold"
            android:gravity="end"
            android:paddingRight="15dp"/>

    </LinearLayout>


    <ListView
        android:id="@+id/drinkListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_below="@+id/menu_linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</LinearLayout>
