<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background4">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="@string/main_welcome"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:padding="5dip"
            />


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_toPrepareOrders_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/main_toPrepare_btn"
            bootstrap:bb_icon_right="fa-list-ul"
            bootstrap:bb_type="primary"
            android:onClick="showOrders"
            android:layout_below="@+id/welcomeTxt"
             bootstrap:bb_roundedCorners="true"
            />


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_menu_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/main_inventaire_btn"
            bootstrap:bb_icon_right="fa-cutlery"
            bootstrap:bb_type="primary"
            android:onClick="showInventaire"
            android:layout_below="@+id/welcomeTxt"
            bootstrap:bb_roundedCorners="true"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_stats_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/main_stats_btn"
            bootstrap:bb_icon_right="fa-bar-chart"
            bootstrap:bb_type="primary"
            android:onClick="showStats"
            android:layout_below="@+id/welcomeTxt"
            bootstrap:bb_roundedCorners="true"
            />


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_logout_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/main_logout_btn"
            bootstrap:bb_icon_right="fa-sign-out"
            bootstrap:bb_type="primary"
            android:onClick="logout"
            android:layout_below="@+id/main_inventaire_btn"
            bootstrap:bb_roundedCorners="true"
            />


    </LinearLayout>
</ScrollView>